move kableExtra out
it cause lines in normal kable tables in latex

--- a/Tables.Rmd
+++ b/Tables.Rmd
@@ -41,7 +41,8 @@ cat("\\clearpage")
 ```{r child = 'Table 3.Rmd'}
 ```
 
-
 ```{r, include=FALSE}
-library(kableExtra)
+#kableExtra is adding lines to tables in Appendix
+#this line needed to prepare the hypotheses table.
+#library(kableExtra)
 ```
