added intro material

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -3,9 +3,9 @@ title: Influence of temperature and upwelling intensity on Indian oil sardine (*
 author: ''
 date: '`r format(Sys.time(), "%d %B, %Y")`'
 output:
-  pdf_document: default
-  md_document: default
   word_document: default
+  md_document: default
+  pdf_document: default
   html_document: default
 header-includes:
 - \usepackage[labelformat=empty]{caption}
@@ -53,7 +53,7 @@ Our analysis focuses on the Kerala coast (Figure `r ref("fig:studyarea")`) regio
 ### Oil sardine life cycle and fishery
 
 <!-- life cycle of the oil sardine -->
-The Indian oil sardine fishery is restricted along the narrow strip of the western India continental shelf, within 20 km from the shore.  The yearly cycle (Figure `r ref("fig:cartoon")`) of the fishery begins at the start of spawning during June – July, corresponding with the onset of the southwest monsoon [@Chidambaram1950; @AntonyRaja1969].  The mature fish migrate from offshore to coastal waters coinciding with the prevailing wind conditions [@Hornell1910]. A gradual increase in temperature ranging from 26 to 28°C is favorable for their inshore migration [@Chidambaram1950], and the spawning begins during the southwest monsoon period when temperature, salinity and suitable food availability are conducive for larval survival [@MurtyEdelman1966; @JayaprakashPillai2000; @Krishnakumaretal2008; @Nairetal2016].  Although peak spawning occurs in June to July, spawning continues into September [@AntonyRaja1969; @Hornell1910; @HornellNayudu1923; @PrabhuDhulkhed1970] and early- and late-spawning cohorts are evident in the length distributions of the 0-year fish.  Spawning occurs in shallow waters outside of the traditional range of the fishery [@AntonyRaja1964], and after spawning the adults migrate closer to the coast and the spent fish become exposed to the fishery.
+The Indian oil sardine fishery is restricted along the narrow strip of the western India continental shelf, within 20 km from the shore.  The yearly cycle (Figure `r ref("fig:cartoon")`) of the fishery begins at the start of spawning during June to July, corresponding with the onset of the southwest monsoon [@Chidambaram1950; @AntonyRaja1969].  The mature fish migrate from offshore to coastal waters coinciding with the prevailing wind conditions [@Hornell1910]. A gradual increase in temperature ranging from 26 to 28°C is favorable for their inshore migration [@Chidambaram1950], and the spawning begins during the southwest monsoon period when temperature, salinity and suitable food availability are conducive for larval survival [@MurtyEdelman1966; @JayaprakashPillai2000; @Krishnakumaretal2008; @Nairetal2016].  Although peak spawning occurs in June to July, spawning continues into September [@AntonyRaja1969; @Hornell1910; @HornellNayudu1923; @PrabhuDhulkhed1970] and early- and late-spawning cohorts are evident in the length distributions of the 0-year fish.  Spawning occurs in shallow waters outside of the traditional range of the fishery [@AntonyRaja1964], and after spawning the adults migrate closer to the coast and the spent fish become exposed to the fishery.
 
 After eggs are spawned, they develop rapidly into larvae within 24 hrs [@Nair1959].  The phytoplankton bloom that provide sardine larvae food is dependent upon nutrient influx from coastal upwelling and runoff from rivers during the monsoon and early fall. The blooms start in the south near the southern tip of India in June, increase in intensity and spread northward up the coast [@Smitha2010]. Variation in the bloom initiation time and intensity leads to changes in the food supply and to corresponding changes in the growth and survival of larvae and in the later recruitment of 0-year sardines into the fishery [@Georgeetal2012].  Oil sardines grow rapidly during their first few months, and 0-year fish from 40mm to 100mm appear in the catch in August and September in most years [@Nairetal2016; @AntonyRaja1970].  As the phytoplankton bloom spreads northward, the oil sardines follow, and the oil sardine fishery builds from south to north during the post-monsoon period. Oil sardines remain inshore feeding throughout the winter months, until March to May when the inshore waters warm considerably and sardines move off-shore to deeper waters [@Chidambaram1950].  Catches of sardines are correspondingly low during this time for all size classes.  The age at first maturity occurs at approximately 150 mm size [@Nairetal2016], which is reached within one year.  When the summer monsoon returns, the oil sardine cycle begins anew.
 
@@ -141,9 +141,9 @@ The catch during the post-monsoon part of the season should be correlated with f
 
 ## Explanatory models
 
-We modeled the catches during the late-spawning season (Qtr 3, Jul-Sep) separately from the post-summer monsoon season (Oct-Jun).  Thus there is no seasonalily in our catch time series, as we analyzed a yearly time series of Qtr 3 catches separately from a yearly time series of post-monsoon catches.  We divided the catch in this way for biological reasons.  Catch in Qtr 3 (Jul-Sep) captures a mix of spawning age fish as it overlaps with the tail end of the spawning season, is affected by a fishery closure from July to mid-August during the summer monsoon, and is periodically inflated by the appearance of small 0-year fish from early summer spawning.  In addition, the covariates that affect the timing of spawning and the early egg and larval survival may be different than those that affect later growth, survival and  shoaling that exposes fish to the inshore fishery.  
+We modeled the catches during the late-spawning season (quarter 3, Jul-Sep) separately from the post-summer monsoon season (Oct-Jun).  Thus there is no seasonalily in our catch time series, as we analyzed a yearly time series of quarter 3 catches separately from a yearly time series of post-monsoon catches.  We divided the catch in this way for biological reasons.  Catch in quarter 3 (Jul-Sep) captures a mix of spawning age fish as it overlaps with the tail end of the spawning season, is affected by a fishery closure from July to mid-August during the summer monsoon, and is periodically inflated by the appearance of small 0-year fish from early summer spawning.  In addition, the covariates that affect the timing of spawning and the early egg and larval survival may be different than those that affect later growth, survival and  shoaling that exposes fish to the inshore fishery.  
 
-We tested ARIMA models on both Qtr 3 and post-monsoon catch time series and found little support for auto-regressive errors (ARIMA models with a MA component) based on diagnostic tests of the residuals and model selection. The best supported ARIMA models were simple AR models ($x_t = b x_{t-1} + \eta$). This lack of strong autocorrelation in residuals has been found in other studies that tested ARIMA models for forecasting small pelagic catch [@StergiouChristou1996].  We thus used AR-only models, however we tested both linear and non-linear models using a generalized additive model (GAM) of the form $x_t = s(x_{t-1}) + \eta$.  The landings models were fit using conditional sum of squares (conditioning on the first 1 or 2 landings values in the time series).
+We tested ARIMA models on both quarter 3 and post-monsoon catch time series and found little support for auto-regressive errors (ARIMA models with a MA component) based on diagnostic tests of the residuals and model selection. The best supported ARIMA models were simple AR models ($x_t = b x_{t-1} + \eta$). This lack of strong autocorrelation in residuals has been found in other studies that tested ARIMA models for forecasting small pelagic catch [@StergiouChristou1996].  We thus used AR-only models, however we tested both linear and non-linear models using a generalized additive model (GAM) of the form $x_t = s(x_{t-1}) + \eta$.  The landings models were fit using conditional sum of squares (conditioning on the first 1 or 2 landings values in the time series).
 
 We investigated correlations between environmental variables and sardine catch  using generalized additive models [GAMs, @Wood2017].  GAMs allow one to model the effect of a covariate as a flexible non-linear function and it was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our approach is analogous to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.  
 
@@ -167,7 +167,7 @@ where $M$ was the best catch model from step 1.  The covariate model seeks to ex
 
 ## Catches in prior seasons as explanatory variables
 
-There was support for including the post-summer monsoon catch in the previous year as an explanatory variable for the Qtr 3 catch (June-August).  Models with $ln(C_{t-1})$ were strongly supported over an intercept only model (Table `r ref("tab:spawner_model_selection")`, time-dependency test).  However the addition of the catch two years prior, $ln(C_{t-2})$, lead to either no decrease in the residual deviance (i.e. increase in the explained variance) and in fact, increased the residual deviance for the model with non-linearity (Table `r ref("tab:spawner_model_selection")`, Linearity test).  We also tested the support for non-linearity in the effect of the prior year catch on the Qtr 3 catch.  This was done by comparing models with $ln(C_{t-1})$ included as a linear term or as a non-linear function $s(ln(C_{t-1}))$ (Table `r ref("tab:spawner_model_selection")`, Linearity test).  The residual deviance decreased using a non-linear response however the cost was 1.4 degrees of freedom.  The result was only weak (non-significant) support for allowing a non-linear response.  The full set of models tested, including tests using catch during the spawning months in previous seasons as a covariate are shown in Tables `r ref("tabappA:spawner-model-linear", pre="A")` and `r ref("tabappA:spawner-model-nonlinear", pre="A")`.  The results were the same if we used the full landings data set from 1956 to 2015 (Table `r ref("tabappA:spawner-model-1956", pre="A")`).  Overall, the landings in prior seasons was only weakly explanatory for the Qtr 3 catch, and the maximum $R^2$ was less than 30% (Table `r ref("tab:spawner_model_selection")`).
+There was support for including the post-summer monsoon catch in the previous year as an explanatory variable for the quarter 3 catch (Jun-Aug).  Models with $ln(C_{t-1})$ were strongly supported over an intercept only model (Table `r ref("tab:spawner_model_selection")`, time-dependency test).  However the addition of the catch two years prior, $ln(C_{t-2})$, lead to either no decrease in the residual deviance (i.e. increase in the explained variance) and in fact, increased the residual deviance for the model with non-linearity (Table `r ref("tab:spawner_model_selection")`, Linearity test).  We also tested the support for non-linearity in the effect of the prior year catch on the quarter 3 catch.  This was done by comparing models with $ln(C_{t-1})$ included as a linear term or as a non-linear function $s(ln(C_{t-1}))$ (Table `r ref("tab:spawner_model_selection")`, Linearity test).  The residual deviance decreased using a non-linear response however the cost was 1.4 degrees of freedom.  The result was only weak (non-significant) support for allowing a non-linear response.  The full set of models tested, including tests using catch during the spawning months in previous seasons as a covariate are shown in Tables `r ref("tabappA:spawner-model-linear", pre="A")` and `r ref("tabappA:spawner-model-nonlinear", pre="A")`.  The results were the same if we used the full landings data set from 1956 to 2015 (Table `r ref("tabappA:spawner-model-1956", pre="A")`).  Overall, the landings in prior seasons was only weakly explanatory for the quarter 3 catch, and the maximum $R^2$ was less than 30% (Table `r ref("tab:spawner_model_selection")`).
 
 The results were similar for models of the landings ($C_t$) during the post-summer monsoon months (Table `r ref("tab:nonspawner-models")`).  The most supported model for $C_t$ used a non-linear response to landings during the post-monsoon months of the previous season: $ln(C_t) \sim ln(C_{t-1})$ with a non-linear response to landings during the spawning season (3rd quarter) two years prior (Table `r ref("tab:nonspawner-models")`).  There was low support for including landings outside of the spawning months two seasons prior or for using the landings during the spawning months in the immediately prior season (Tables `r ref("tabappA:nonspawner-model-time-a", pre="A")`, `r ref("tabappA:nonspawner-model-time-b", pre="A")`, and `r ref("tabappA:nonspawner-model-time-c", pre="A")`).  We did not test models using the catch during quarter 3 in the current fishing season as these data would not be available; the data requires 12 months to process.
 
