Halfway done with reformating tables

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -72,7 +72,7 @@ As the success of commercial fishery for each season is determined by the number
 
 ## Sardine landing data
 
-Quarterly fish landing data have been collected by the Central Marine Fisheries Research Institute (CMFRI) in Kochi, India, since the early 1950s using a stratified multi-stage sample design that takes into account landing centers, number of fishing days, and boat net combinations in fishing operations [@Srinathetal2005]. The quarterly landings for oil sardine landed from all gears in Kerala were obtained from CMFRI reports (1956-1984) and online database (1985-2015) [@CMFRI1969; @Pillai1982; @Jacobetal1987; @CMFRI1995; @CMFRI2016]. The quarterly landing data were log-transformed to stabilize the seasonal variance. 
+Quarterly fish landing data have been collected by the Central Marine Fisheries Research Institute (CMFRI) in Kochi, India, since the early 1950s using a stratified multi-stage sample design that takes into account landing centers, number of fishing days, and boat net combinations in fishing operations [@Srinathetal2005]. The quarterly landings for oil sardine landed from all gears in Kerala were obtained from CMFRI reports (1956-1984) and online databases (1985-2015) [@CMFRI1969; @Pillai1982; @Jacobetal1987; @CMFRI1995; @CMFRI2016]. The quarterly landing data were log-transformed to stabilize the seasonal variance. 
 
 <!--
 
@@ -88,12 +88,12 @@ For sea surface temperature, we used Advanced Very-High Resolution Radiometer (A
 
 For an index of coastal upwelling, we used the sea-surface temperature differential between nearshore and 3 degrees offshore as described by Naidu et al. [-@Naiduetal1999] and Smitha et al. [-@Smithaetal2008].  The index was computed as the average SST in box 4 off Kochi (Figure `r ref("fig:studyarea")`) minus the average SST in box 13.  For SST, we used the remote-sensing sea-surface temperature data sets described above. This SST-based upwelling index has been validated as a more reliable metric of upwelling off the coast of Kerala compared to wind-based upwelling indices [@Smithaetal2008]. The upwelling index and chlorophyll-a blooms are strongly correlated (Figure `r ref("fig:SSTts")`).
 
-Precipitation data were obtained from two different sources.  The first was an estimate of the monthly precipitation (in mm) over Kerala from land-based rain gauges [@KothawaleRajeevan2017].  This time series is available from the start of our landing data (1956).  The second was a remote-sensing precipitation product from the NOAA Global Precipitation Climatology Project [@Adleretal2016].  This provides estimates of precipitation over the ocean using a 2.5 degree grid.  We used the 2.5 by 2.5 degree box defined by latitude 8.75 to 11.25 and longitude 73.25 to 75.75 for the precipitation off the coast of Kerala.  These data are available from 1979 forward [@NCEI2017]. The land and nearshore ocean precipitation data are highly correlated (Appendix), supporting the use of the land time series as a proxy for the precipitation over the ocean off the Kerala coast.
+Precipitation data were obtained from two different sources.  The first was an estimate of the monthly precipitation (in mm) over Kerala from land-based rain gauges [@KothawaleRajeevan2017]; these data are available from the Indian Institute of Tropical Meteorology and the data are available from the start of our landing data (1956).  The second was a remote-sensing precipitation product from the NOAA Global Precipitation Climatology Project [@Adleretal2016].  This provides estimates of precipitation over the ocean using a 2.5 degree grid.  We used the 2.5 by 2.5 degree box defined by latitude 8.75 to 11.25 and longitude 73.25 to 75.75 for the precipitation off the coast of Kerala.  These data are available from 1979 forward [@NCEI2017]. The land and nearshore ocean precipitation data are highly correlated (Appendix), supporting the use of the land time series as a proxy for the precipitation over the ocean off the Kerala coast.
 
 
 ## Hypotheses
 
-Based on biological information concerning how environmental conditions affect sardine survival and recruitment and affect exposure of Indian oil sardines to the coastal fishery, we developed a set of hypotheses (Table `r ref("tab:hypotheses")`) concerning which remote-sensing covariates in which months should correlate with landings in specific quarters.  The quarter 3 (Jul-Sep) catch overlaps the monsoon and the main spawning months.  This is also the quarter where small 0-year fish from early spawning (June) often appear in the catch, sometimes in large numbers.  Variables that affect or are correlated with movement of sardines inshore should be correlated with quarter 3 landings.  In addition,  pre-spawning (Jan-May) environmental conditions should be correlated with the spawning strength as adult oil sardines experience an acceleration of growth during this period along with egg development.  The post-monsoon catch (Oct-May) is a mix of 0-year fish (less than 12 months old) and mature fish (greater than 12 months old).  Variables that are correlated with larval and juvenile survival should correlate with the post-monsoon catch both in the current year and in future years, one to two years after.  
+Our statistical analyses were structured around specific hypotheses (Table `r ref("tab:hypotheses")`) concerning which remote-sensing covariates in which months should correlate with landings in specific quarters.  These hypotheses were based on biological information concerning how environmental conditions affect sardine survival and recruitment and affect exposure of Indian oil sardines to the coastal fishery. The quarter 3 (Jul-Sep) catch overlaps the summer monsoon and the main spawning months.  This is also the quarter where small 0-year fish from early spawning (June) often appear in the catch, sometimes in large numbers.  Variables that affect or are correlated with movement of sardines inshore should be correlated with quarter 3 landings.  In addition,  pre-spawning (January-May) environmental conditions should be correlated with the spawning strength as adult oil sardines experience an acceleration of growth during this period along with egg development.  The post-monsoon catch (Oct-May) is a mix of 0-year fish (less than 12 months old) and mature fish (greater than 12 months old).  Variables that are correlated with larval and juvenile survival should correlate with the post-monsoon catch both in the current year and in future years, one to two years after.  
 
 Our hypotheses (Table `r ref("tab:hypotheses")`) focus mainly on two drivers: upwelling and ocean temperature.  We also test hypotheses concerning precipitation as this has historically been an environmental covariate considered to influence the timing of oil sardine landings.  Salinity has been proposed as responsible for spawning initiation; however we do not have long-term salinity data. In the Appendix, we show tests of chlorophyll-a but as with salinity the CHL time series is short (1997-2015) and the tests have low power.
 
@@ -138,7 +138,7 @@ The catch during the post-monsoon part of the season should be correlated with f
 
 ## Explanatory models
 
-We modeled the catches during the late-spawning season (quarter 3, July-September) separately from the post-summer monsoon season (October-June).  Thus there is no seasonalily in our catch time series, as we analyzed a yearly time series of quarter 3 catches separately from a yearly time series of post-monsoon catches.  We divided the catch in this way for biological reasons.  Catch in quarter 3 (Jul-Sep) captures a mix of spawning age fish as it overlaps with the tail end of the spawning season, is affected by a fishery closure from July to mid-August during the summer monsoon, and is periodically inflated by the appearance of small 0-year fish from early summer spawning.  In addition, the covariates that affect the timing of spawning, movement of post-spawning mature fish inshore, and early egg and larval survival may be different than those that affect later growth, survival and  shoaling that exposes fish to the inshore fishery.  
+We modeled the catches during the late-spawning season (quarter 3, July-September) separately from the post-monsoon season (October-March).  Thus there is no seasonalily in our catch time series, as we analyzed a yearly time series of quarter 3 catches separately from a yearly time series of post-monsoon catches.  We divided the catch in this way for biologicaland statistical reasons.  Catch in quarter 3 (July-September) captures a mix of spawning age fish as it overlaps with the tail end of the spawning season, is affected by a fishery closure from July to mid-August during the summer monsoon, and is periodically inflated by the appearance of small 0-year fish from early summer spawning.  In addition, the covariates that affect the timing of spawning, movement of post-spawning mature fish inshore, and early egg and larval survival may be different than those that affect later growth, survival and  shoaling that exposes fish to the inshore fishery. Analyzing catch and covariate time series without seasonality also had an important statistical benefit---we removed the problem of seasonality in the catch and all the covariates. The oil sardine life-cycle is seasonal and driven by the strong seasonality in this monsoon influenced system. A simple statistical model with quarters will explain much of the quarterly catch data since most of the yearly variability is due to seasonality and any environmental covariate with a similar seasonality will also show high correlation with the landings. Our goal was to explain year-to-year variability thus eliminating the confounding effect of seasonality in the data was important.
 
 We tested ARIMA models on both quarter 3 and post-monsoon catch time series and found little support for auto-regressive errors (ARIMA models with a MA component) based on diagnostic tests of the residuals and model selection. The best supported ARIMA models were simple AR models ($x_t = b x_{t-1} + \eta_t$). This lack of strong autocorrelation in residuals has been found in other studies that tested ARIMA models for forecasting small pelagic catch [@StergiouChristou1996].  We thus used AR-only models, however we tested both linear and non-linear models using a generalized additive model (GAM) of the form $x_t = s(x_{t-1}) + \eta_t$.  The landings models were fit using conditional sum of squares (conditioning on the first 1 or 2 landings values in the time series). We investigated correlations between environmental variables and sardine catch  using generalized additive models [GAMs, @Wood2017] to allow one to model the effect of a covariate as a flexible non-linear function. It was known that the effects of the environmental covariates were likely to be non-linear, albeit in an unknown way.  Our approach is analogous to that taken by Jacobson and MacCall [-@JacobsonMacCall1995] in a study of the effects of SST on Pacific sardine recruitment.  
 
